--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,8 @@
 </head>
 <body>
   <div class="container">
-    <p class="h1">Currency Exchanger</p>
-    <label class="form-label mb-3 mb-3">Enter amount to convert:
-      <input id="input" type="text" class="form-control" placeholder="Amount">
-    </label>
+    <p class="h1" id="title">Currency Exchanger</p>
+    <input id="input" type="text" class="form-control mb-3" placeholder="Amount">
     <div class="input-group mb-3"> 
       <label class="input-group-text">Covert from</label>
       <select id="baseCode" name="baseCode" class="form-select">
@@ -24,7 +22,8 @@
       </select>
     </div>
     <button id="btn" type="submit" class="btn btn-primary">Show Exchange Amount</button>
-    <div class="container" id="display-exchange"></div>
+    <p class="h3 container" id="display-exchange"></p>
+    <p class="h3 container" id="display-error"></p>
   </div>
 </body>
 </html>
