--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,12 @@
     <p class="h1" id="title">Currency Exchanger</p>
     <input id="input" type="text" class="form-control mb-3" placeholder="Amount">
     <div class="input-group mb-3"> 
-      <label class="input-group-text">Covert from</label>
+      <label class="input-group-text">Covert from - select one</label>
       <select id="baseCode" name="baseCode" class="form-select">
       </select>
     </div>
     <div class="input-group mb-3"> 
-      <label class="input-group-text">Covert To</label>
+      <label class="input-group-text">Covert To - select one</label>
       <select id="targetCode" name="targetCode" class="form-select">
       </select>
     </div>
