--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="main-container" class="container">
-    <p class="h1 text-center pb-3" id="title">Currency Exchanger</p>
+    <p class="h1 text-center pt-4 pb-3" id="title">Currency Exchanger</p>
     <input id="input" type="text" class="form-control mb-3" placeholder="Amount">
     <div class="input-group mb-3"> 
       <label class="input-group-text">Covert from - select one</label>
